@@ -1,4 +1,5 @@
 - BUNDLE and BUNDLE-COMMAND are now case-insensitive.
+- If a BUNDLE-COMMAND fails, vim-update-bundles now exits immediately.
 
 0.2  27 Oct 2010
 - Added a pure ruby configuration file, ~/vim-update-bundles.rb
